zaawal too unshdag bolson

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             class="add__description"
             placeholder="Тайлбар оруулах"
           />
-          <input type="number" class="add__value" value="" placeholder="Дүн" />
+          <input type="number" class="add__value" placeholder="Дүн" />
           <button class="add__btn">
             <i class="ion-ios-checkmark-outline"></i>
           </button>
